[package]
name = "roxy"
version = "0.1.0"
edition = "2021"
about = "a local development proxy that rocks!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.24", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.25.0", features = ["full"] }
log = "0.4.17"
clap = { version = "4.1.8", features = ["derive"] }
thiserror = "1.0.38"
env_logger = "0.10.0"
